# Ros-Orchestration

./: .gitattributes  CONTRIBUTING.md  README.md  RobotOrchestrator.sln  add-headers.sh  azure-pipelines.yml  cgmanifest.json  docker-compose.yml  package-lock.json
Docs/: Architecture.md  CICD.md  DeployRobotAndSimulator.md  InstallRequirements.md  Provisioning.md  RunLocally.md  SendTestOrders.md
Provisioning/: azuredeploy.json  deploy.sh  deploy_selfsigned_cert.sh  keyvault.json  keyvault.parameters.json
Robot/: Dockerfile-robot  Dockerfile-simulator
Robot/src/orchestrator_msgs/: CMakeLists.txt  package.xml
Robot/src/orchestrator_msgs/msg/: Job.msg  Position.msg  Telemetry.msg
Robot/src/orchestrator_msgs/srv/: RobotInfo.srv
RobotOrchestrator.Dispatcher/: Dispatcher.cs  IDispatcher.cs  IIotHubServiceClient.cs  IotHubServiceClient.cs  IotHubServiceClientOptions.cs  Program.cs  RobotOrchestrator.Dispatcher.csproj  Startup.cs  azure-pipelines.yml
RobotOrchestrator.Dispatcher.Tests/: RobotOrchestrator.Dispatcher.Tests.csproj
RobotOrchestrator.FleetManager/: FleetManager.cs  IFleetManager.cs  IIotHubRegistryClient.cs  ITelemetryHandler.cs  IotHubRegistryClient.cs  IotHubRegistryClientOptions.cs  Program.cs  RobotConfig.cs  RobotOrchestrator.FleetManager.csproj  Startup.cs  TelemetryEventProcessor.cs  TelemetryHandler.cs  appsettings.json  azure-pipelines.yml
RobotOrchestrator.FleetManager.Tests/: FleetManagerTests.cs  IotHubRegistryClientTest.cs  RobotOrchestrator.FleetManager.Tests.csproj
RobotOrchestrator.OrderManager.Tests/: OrderManagerTests.cs  (+1 more)
(+115 files in other folders)
